<resources>
    <string name="app_name">StreetCams</string>
    <string name="app_name_long">Ottawa StreetCams</string>
    <string name="about">About</string>
    <string name="add_to_favourites">Favourite</string>
    <string name="all">All</string>
    <string name="favourites">Favourites</string>
    <string name="hidden_cameras">Hidden</string>
    <string name="hide">Hide</string>
    <string name="more">More</string>
    <string name="clear">Clear</string>
    <string name="image_saved">%s saved</string>
    <string name="image_saved_at">Image saved at %s</string>
    <string name="licences">Licences</string>
    <string name="location_unavailable">Location not available</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="gallery">Gallery</string>
    <string name="neighbourhoods">Neighbourhoods</string>
    <string name="night_mode">Night mode</string>
    <string name="no_network_content">Try again later</string>
    <string name="retry">Retry</string>
    <string name="no_network_title">Could not load</string>
    <string name="could_not_load_long">Could not load. Try again later.</string>
    <string name="random_camera">Random</string>
    <string name="rate">Rate</string>
    <string name="remove_from_favourites">Un-favourite</string>
    <string name="download">Download</string>
    <string name="search">Search</string>
    <string name="search_neighbourhood">Search by\nneighbourhood</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="view">View</string>
    <string name="shuffle">Shuffle</string>
    <string name="sort_by_distance">Sort by distance</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_neighbourhood">Sort by\nneighbourhood</string>
    <string name="switch_view">Switch view</string>
    <string name="unhide">Unhide</string>
    <string name="version">Version %s</string>
    <string name="sort">Sort</string>
    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="camera_visibility_changed">%s has been %s</string>
    <string name="unhidden">unhidden</string>
    <string name="hidden">hidden</string>
    <string name="undo">Undo</string>
    <string name="light_mode">Light</string>
    <string name="dark_mode">Dark</string>
    <string name="system_default">Default</string>
    <string name="change_theme">Theme</string>
    <string name="all">All</string>

    <plurals name="images_saved">
        <item quantity="one">%d image saved</item>
        <item quantity="other">%d images saved</item>
    </plurals>
    <plurals name="selectedCameras">
        <item quantity="one">%d selected</item>
        <item quantity="other">%d selected</item>
    </plurals>
    <plurals name="search_hint">
        <item quantity="one">Search from %d camera</item>
        <item quantity="other">Search from %d cameras</item>
    </plurals>
    <plurals name="search_hint_neighbourhood">
        <item quantity="one">Search from %d neighbourhood</item>
        <item quantity="other">Search from %d neighbourhoods</item>
    </plurals>
    <plurals name="camera_count">
        <item quantity="one">%d camera</item>
        <item quantity="other">%d cameras</item>
    </plurals>
</resources>