<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/camera_searchView"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/neighbourhood_searchView"
        android:icon="@drawable/baseline_travel_explore_24"
        android:title="@string/search_neighbourhood"
        android:visible="false"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuItemMap"
        android:icon="@drawable/baseline_place_24"
        android:title="@string/switch_view"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/sort"
        android:icon="@drawable/baseline_sort_24"
        android:title="@string/sort"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/favourites"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/favourites"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/hidden"
        android:icon="@drawable/ic_baseline_visibility_off_24"
        android:title="@string/hidden_cameras"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/random_camera"
        android:icon="@drawable/ic_baseline_casino_24"
        android:title="@string/random_camera"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/shuffle"
        android:icon="@drawable/ic_baseline_shuffle_24"
        android:title="@string/shuffle"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/night_mode"
        android:checkable="true"
        android:checked="true"
        android:title="@string/night_mode"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_baseline_save_alt_24"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>